src/test/deca/context/valid/SansObjet/DeclVar-Div-float-float-int.deca
// Description:
//    Declaration of a float variable using / operation between a float variable and int .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  2.5; 
    int y = 20; 
    float z = 2.5 / 20; 
}
