src/test/deca/context/invalid/SansObjet/DeclVar-Plus-int-int-float.deca
// Description:
//    Declaration of a int variable using + operation between a int variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  17; 
    float y = 2.5; 
    int z = x + y ; 
}
